Update SQL plugin for core refactor (#1571)
Signed-off-by: MaxKsyunz <maxk@bitquilltech.com>
(cherry picked from commit 4522422c270707a4d486b97ec8dfcbd7e44bea44)